--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "description": "experimenting with node.js and express",
   "version": "0.0.1",
   "dependencies": {
-    "express": "3.x"
+    "express": "3.x",
+    "mongodb": "1.1.8"
   }
 }
